--- a/src/App.css
+++ b/src/App.css
@@ -121,7 +121,7 @@
 
 #tab-general {
     /*padding-left: 0;*/
-    background-color: white;
+    /*background-color: white;*/
     color: #4a4a4a;
     font-weight: bold;
     border-right: 2px solid #cacaca;
@@ -165,7 +165,7 @@
 }
 
 .action-bar {
-    background-color: #F8F8F8;
+    /*background-color: #F8F8F8;*/
     border-top: 0.5px solid #e7e7e7;
     border-bottom: 0.5px solid #e7e7e7;
     height: initial;
@@ -179,7 +179,7 @@
 }
 
 .chatMessage :hover {
-    background-color: #f0f2f5;
+    /*background-color: #f0f2f5;*/
 }
 
 .chatMessage:hover .messageActions {
@@ -189,7 +189,7 @@
 
 .chatMessage .messageActions {
     position: absolute;
-    background-color: white;
+    /*background-color: white;*/
     border: 1px solid #d1d1d1;
     border-radius: 2px;
     padding-left: 5px;
@@ -232,7 +232,7 @@
     right: -10px;
     bottom: 0;
     position: absolute;
-    background-color: #DFE2E8;
+    /*background-color: #DFE2E8;*/
     width: 10px;
     z-index: 100;
     cursor: ew-resize;
@@ -438,7 +438,7 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    background-color: #FAFAFA;
+    /*background-color: #FAFAFA;*/
     /*position: fixed;*/
     /*bottom: 0;*/
     /*right: 0;*/
@@ -514,7 +514,7 @@ div.availabilityOptionsOpen span.availabilityOption {
 
 .chatIdentitySidebar {
     color: black;
-    background-color: #d6e4ff;
+    /*background-color: #d6e4ff;*/
 }
 
 .chatButtonCollapsed {
@@ -529,7 +529,7 @@ div.availabilityOptionsOpen span.availabilityOption {
 }
 
 .embeddedChatFrame {
-    background-color: #FAFAFA;
+    /*background-color: #FAFAFA;*/
     bottom: 0;
     width: 100%;
     height: 100%;
@@ -585,7 +585,7 @@ div.availabilityOptionsOpen span.availabilityOption {
 .chatMessageContainer {
     flex-direction: column-reverse;
     padding: 5px;
-    background-color: #fafafa;
+    /*background-color: #fafafa;*/
 }
 
 .bottomChatHeaderItems {
@@ -627,7 +627,7 @@ div.availabilityOptionsOpen span.availabilityOption {
 }
 
 .bottomChatIdentity {
-    background-color: #d6e4ff;
+    /*background-color: #d6e4ff;*/
     color: black;
     padding-left: 2px;
     flex-grow: 2;
@@ -698,7 +698,7 @@ td.ant-table-cell.program-table-programItem {
 
 #sidepopoutcontainer .social-sidebar-divider {
     margin: 0;
-    background-color: #d6e4ff;
+    /*background-color: #d6e4ff;*/
     border: 0;
 }
 
@@ -708,7 +708,7 @@ td.ant-table-cell.program-table-programItem {
 
 .social-sidebar-divider {
     margin: 0;
-    background-color: #d6e4ff;
+    /*background-color: #d6e4ff;*/
     border: 0;
 }
 
@@ -849,7 +849,7 @@ span.ant-divider-inner-text {
 }
 
 .multiChatWindow {
-    background-color: white;
+    /*background-color: white;*/
     /*   border: 2px solid #1890FF; */
     /* BCP: Changed (I think this looks right) */
     border: 2px solid #d6e4ff;
@@ -861,22 +861,22 @@ span.ant-divider-inner-text {
 }
 
 .multiChatWindowHeader button.ant-btn-primary {
-    background-color: #d6e4ff;
+    /*background-color: #d6e4ff;*/
     text-shadow: none;
     border: none;
-    color: black;
+    /*color: black;*/
 }
 
 .multiChatWindowHeader button.ant-btn-primary:hover {
     background-color: #597ef7;
     border: none;
-    color: black;
+    /*color: black;*/
 }
 
 .multiChatWindowHeader {
     /* background-color: #1890FF; */
-    background-color: #d6e4ff;
-    color: black;
+    /*background-color: #d6e4ff;*/
+    /*color: black;*/
     /* font-weight: bold; */
     font-size: 16px;
     text-align: center;
@@ -909,7 +909,7 @@ span.ant-divider-inner-text {
 }
 
 .multiChatWindowChatArea {
-    background-color: #FAFAFA;
+    /*background-color: #FAFAFA;*/
     /*width: 100%;*/
     /*height: 100%;*/
     flex-grow: 4;
@@ -1199,7 +1199,7 @@ span.ant-divider-inner-text {
 }
 
 .userDisplay .userName {
-    color: black;
+    /*color: black;*/
 }
 
 .bottomChatClose button {
